validator middleware fixed and tested
