# docs/swagger.json
@@ -61,6 +61,37 @@
                         }
                     }
                 }
+            },
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Simple Create entity example",
+                "parameters": [
+                    {
+                        "description": "Input data to create new entity",
+                        "name": "hw",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.HelloWorldBodyInput"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created"
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
             }
         }
     },
@@ -71,6 +102,21 @@
                 "message": {
                     "type": "string",
                     "example": "Server running!"
+                }
+            }
+        },
+        "models.HelloWorldBodyInput": {
+            "description": "Basic information to create a new entity",
+            "type": "object",
+            "required": [
+                "name"
+            ],
+            "properties": {
+                "name": {
+                    "type": "string",
+                    "maxLength": 40,
+                    "minLength": 1,
+                    "example": "ea68c913-2e60-487d-b108-26836271e500"
                 }
             }
         },
