# src/application/api/controllers/hello-world/hello-world-controller.go
@@ -2,12 +2,17 @@ package helloWorldController
 
 import (
 	helloWorldModel "backend-boilerplate/src/application/api/controllers/hello-world/models"
+	middlewares "backend-boilerplate/src/application/api/middlewares"
 	"backend-boilerplate/src/application/api/presenters"
 	"backend-boilerplate/src/core/orm/models"
 	"context"
 	"database/sql"
 	"fmt"
 	"github.com/gin-gonic/gin"
+	"github.com/google/uuid"
+	"github.com/prometheus/common/log"
+	"github.com/volatiletech/null/v8"
+	"github.com/volatiletech/sqlboiler/v4/boil"
 	"net/http"
 )
 
@@ -16,7 +21,7 @@ type HelloWorldController struct {
 	JsonPresenter presenters.JsonPresenter
 }
 
-// List Hello World backend-boilerplate
+// List Hello-World
 // Lists data structure from database
 // @Summary Simple list data example
 // @Produce json
@@ -31,11 +36,34 @@ func (hw HelloWorldController) List(ctx *gin.Context) {
 		ctx.Status(http.StatusInternalServerError)
 	}
 
-	presenterList := helloWorldModel.InitListFromModelSlice(helloWorldExample)
+	presenterList := helloWorldModel.InitPresenterListFromModelSlice(helloWorldExample)
 
 	response := hw.JsonPresenter.Envelope(presenterList)
 
 	ctx.JSON(200, response)
+}
+
+// CreateHelloWorld Hello-World
+// Create new entity in the database
+// @Summary Simple Create entity example
+// @Produce json
+// @Accept  json
+// @Param hw body helloWorldModel.HelloWorldBodyInput true "Input data to create new entity"
+// @Success 201 "Created"
+// @Failure 400 {string} string
+// @Router /hello-world [post]
+func (hw HelloWorldController) CreateHelloWorld(c *gin.Context) {
+	body := middlewares.GetJsonBody[helloWorldModel.HelloWorldBodyInput](c)
+	newHelloWorld := models.HelloWorldEntity{
+		Name: null.String{String: body.Name, Valid: true},
+		ID:   uuid.New().String(),
+	}
+	insertErr := newHelloWorld.Insert(context.Background(), hw.DB, boil.Infer())
+	if insertErr != nil {
+		log.Error(insertErr)
+		c.Status(http.StatusInternalServerError)
+	}
+	c.Status(http.StatusCreated)
 }
 
 func Handler(
@@ -49,6 +77,8 @@ func Handler(
 		JsonPresenter: *jsonPresenter,
 	}
 
-	apiAddress := fmt.Sprintf("%s/health-check", baseApiAddress)
+	apiAddress := fmt.Sprintf("%s/hello-world", baseApiAddress)
 	ginApp.GET(apiAddress, helloWorldController.List)
+	ginApp.POST(apiAddress, middlewares.ValidateJsonBody[helloWorldModel.HelloWorldBodyInput](), helloWorldController.CreateHelloWorld)
+
 }
